实现众包反馈质量控制与预测加权
